# C-CPP-Toolchain

./: .clang-format  .gitmodules  C-CPP-Toolchain.code-workspace  CMakeLists.txt  LICENSE  README.md  cmake-variants.yaml  workspace.code-workspace
.copilot/: clean-code-instructions copy.md  clean-code-instructions.md  readme.md-instructions.md  refactoring-instructions.md  testing-instructions.md
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: agent-instructions.md  clean-code.instructions.md  refactoring-instructions.md
cmake/: clang_format.cmake  compiler_flags.cmake
cmake/coverage/: CoverageExcludes.cmake  clang_coverage.cmake  gcc_coverage.cmake  msvc_coverage.cmake
docs/: CMAKE_TOOLS.md  DEPENDENCY_ISOLATION.md  PODMAN.md  main copy.cpp.txt
host-app/: CMakeLists.txt  workspace.code-workspace
host-app/cmake/: build_types.cmake
host-app/cmake/coverage/: msvc_coverage.cmake
host-app/lib/: CMakeLists.txt
host-app/lib/example/: CMakeLists.txt
host-app/lib/example/include/example/: add.h
host-app/lib/example/src/: add.c
host-app/src/: main.cpp
host-app/tests/: CMakeLists.txt
host-app/tests/helpers/: TestHelpers.hpp
host-app/tests/src/: e2e_tests.cpp  unit_tests.cpp
lib/: CMakeLists.txt
lib/BackupUtility/: CMakeLists.txt
lib/BackupUtility/include/BackupUtility/: BackupUtility.hpp  FileHasher.hpp  FileStateRepository.hpp  FilesystemFileEnumerator.hpp  FilesystemSnapshotDirectory.hpp  ProcessBackupFile.hpp  ProcessDeletedFiles.hpp  SQLiteConnection.hpp  SQLiteSession.hpp  SnapshotDirectoryProvider.hpp  SqliteStatement.hpp  TimestampProvider.hpp
lib/BackupUtility/src/: BackupUtility.cpp  FileHasher.cpp  FileStateRepository.cpp  FileStateRepository.hpp  FilesystemFileEnumerator.cpp  FilesystemSnapshotDirectory.cpp  ProcessBackupFile.cpp  ProcessBackupFile.hpp  ProcessDeletedFiles.cpp  ProcessDeletedFiles.hpp  SQLiteSession.cpp  SnapshotDirectoryProvider.cpp  SqliteConnection.cpp  SqliteStatement.cpp  ThreadedFileQueue.cpp  TimestampProvider.cpp
lib/FileHasher/: CMakeLists.txt
lib/FileHasher/include/FileHasher/: FileHasher.hpp
lib/FileHasher/src/: FileHasher.cpp
lib/FileIterator/: CMakeLists.txt
lib/FileIterator/include/FileIterator/: FileIterator.hpp
lib/FileIterator/src/: FileIterator.cpp
lib/SQLite/: CMakeLists.txt
lib/SQLite/include/SQLite/: SQLiteConnection.hpp  SQLiteSession.hpp
lib/SQLite/src/: SQLiteConnection.cpp  SQLiteSession.cpp  SQLiteStatement.cpp
lib/SQLiteSession/: CMakeLists.txt
lib/SQLiteSession/include/SQLiteSession/: SQLiteConnection.hpp  SQLiteSession.hpp  SQLiteStatement.hpp
lib/SQLiteSession/src/: SQLiteConnection.cpp  SQLiteSession.cpp  SQLiteStatement.cpp
lib/SnapshotDirectoryProvider/: CMakeLists.txt
lib/SnapshotDirectoryProvider/include/SnapshotDirectoryProvider/: SnapshotDirectoryProvider.hpp
lib/SnapshotDirectoryProvider/src/: SnapshotDirectoryProvider.cpp
lib/ThreadedFileQueue/: CMakeLists.txt
lib/ThreadedFileQueue/include/ThreadedFileQueue/: ThreadedFileQueue.hpp
lib/ThreadedFileQueue/src/: ThreadedFileQueue.cpp
lib/TimestampProvider/: CMakeLists.txt
lib/TimestampProvider/include/TimestampProvider/: TimestampProvider.hpp
lib/TimestampProvider/src/: TimestampProvider.cpp
lib/example/: CMakeLists.txt
lib/example/include/example/: example.h
lib/example/src/: example.c
scripts/: run_valgrind.sh
src/: main.cpp
tests/: CMakeLists.txt
tests/helpers/: TestHelpers.hpp
tests/python/: test_example.py
tests/src/: backup_change_type_test.cpp  backup_change_type_tests.cpp  backup_e2e_tests.cpp  backup_extended_tests.cpp  backup_lifecycle_test.cpp  backup_unit_tests.cpp  backup_utility_test.cpp  e2e_backup_test.cpp  sanitizer_tests.cpp  sanitizer_validation_tests.cpp
workspace1/: CMakeLists.txt  Makefile
workspace1/cmake/coverage/: coverage_report.cmake  gcc_coverage.cmake  msvc_coverage.cmake
workspace1/scripts/: valgrindXML.py
workspace1/tests/src/: e2e_tests.cpp  unit_tests.cpp
workspace2/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
workspace2/cmake/: compiler_flags.cmake
workspace2/cmake/coverage/: clang_coverage.cmake
workspace2/cmake/toolchains/: asan.cmake  msan.cmake  tsan.cmake  ubsan.cmake
workspace2/lib/: CMakeLists.txt
workspace2/lib/example/: CMakeLists.txt
workspace2/src/: main.cpp
workspace2/tests/src/: e2e_tests.cpp  unit_tests.cpp
